--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ permalink: /blog/:title
 
 
 # My variables
-name: Micah Cowell
-description: Futuristic web design
+name: 钦笔闲书
+description: 偶尔写写，吐槽下生活，分享点自己觉得有意思的东西。
 google_verification: null
 
 
