--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,8 @@
 - title: about
   url: /me
-
-- title: github
-  url: https://github.com/zeove
-
-- title: twitter
+  
+  - title: twitter
   url: https://twitter.com/zeove
+
+- title: instagram
+  url: https://www.instagram.com/zeove/
