--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ permalink: /blog/:title
 
 
 # My variables
-name: 钦笔闲书
+name: Zeove'blog
 description: 偶尔写写，吐槽下生活，分享点自己觉得有意思的东西。
 google_verification: null
 
