--- a/_config.yml
+++ b/_config.yml
@@ -5,6 +5,7 @@ permalink: /blog/:title
 # My variables
 name: Zeove'blog
 description: 偶尔写写，吐槽下生活，分享点自己觉得有意思的东西。
+url: https://zeove.com
 google_verification: null
 
 
