--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 - title: about
   url: /me
-- title: notes
-  url: /notes
+- title: excerpt
+  url: /excerpt
 - title: list
   url: /list
 - title: store
