--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,5 +4,4 @@
   url: /notes
 - title: list
   url: /list
-- title：refe
-  url：https://www.dropbox.com/sh/h1laekdncwhokd8/AABroX8cy8rj0pBidp30Delma?dl=0
+- title：[refe](https://www.dropbox.com/sh/h1laekdncwhokd8/AABroX8cy8rj0pBidp30Delma?dl=0)
