--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,4 +4,4 @@
   url: /notes
 - title: list
   url: /list
-- title：<a href="https://www.dropbox.com/sh/h1laekdncwhokd8/AABroX8cy8rj0pBidp30Delma?dl=0">refe</a>
+- title: <a href="https://www.dropbox.com/sh/h1laekdncwhokd8/AABroX8cy8rj0pBidp30Delma?dl=0">refe</a>
