--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,3 +5,4 @@
 - title: list
   url: /list
 - title: <a href="https://www.dropbox.com/sh/h1laekdncwhokd8/AABroX8cy8rj0pBidp30Delma?dl=0" target="_blank">refer</a>
+- title: <a href="https://paper.dropbox.com/doc/--ADU17SZ2bloA4DWfOz~jIcajAQ-xZdApWi9Si1FGS1MKhIk1" target="_blank">startup</a>
